syntax = "proto3";

package com.austin.netty.nettyByProtobuf.domain;

option java_package = "com.austin.netty.nettyByProtobuf.domain";
option java_multiple_files = true;
option java_outer_classname = "MsgInfo";

message MsgBody {

  string channelId = 1;
  string msgInfo = 2;

}